# AlloySolidificationSolver

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: alloy.h  approximators.h  differentials.h  enzyme.h  models.h  optimiser.h
src/: LGK_Solver.cpp  alloy.h  approximators.h  build.sh  differentials.h  enzyme.h  equations.h  main.cpp  models.h  optimiser.h
tests/: models_tests.cpp  tests_1.cpp  tests_2.cpp
